--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/p0-C00203711"]
 	path = lib/p0-C00203711
 	url = https://github.com/Pierce-James/p0-C00203711.git
+[submodule "lib/RealWorldSimY4"]
+	path = lib/RealWorldSimY4
+	url = https://github.com/AaronCur/RealWorldSimY4.git
