--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/RealWorldSimY4"]
 	path = lib/RealWorldSimY4
 	url = https://github.com/AaronCur/RealWorldSimY4.git
+[submodule "lib/RealWorldModelling"]
+	path = lib/RealWorldModelling
+	url = https://github.com/C00206286/RealWorldModelling.git
