--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/RealWorldModelling"]
 	path = lib/RealWorldModelling
 	url = https://github.com/C00206286/RealWorldModelling.git
+[submodule "lib/P0-C00202334"]
+	path = P0-C00202334
+	url = https://github.com/Davidnln13/P0-C00202334.git
