--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/P0-C00202334"]
 	path = P0-C00202334
 	url = https://github.com/Davidnln13/P0-C00202334.git
+[submodule "lib/p0-c00203250"]
+	path = lib/p0-c00203250
+	url = https://github.com/rafael-plugge/p0-c00203250.git
