--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,8 @@
 [submodule "lib/P0-C00202334"]
 	path = P0-C00202334
 	url = https://github.com/Davidnln13/P0-C00202334.git
+  branch = diff
+[submodule "P0-C00202334"]
+	path = P0-C00202334
+	url = https://github.com/Davidnln13/P0-C00202334.git
+	branch = diff
