--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/RealWorldModelling"]
 	path = lib/RealWorldModelling
 	url = https://github.com/C00206286/RealWorldModelling.git
+[submodule "lib/p0-c00204864"]
+	path = lib/p0-c00204864
+	url = https://github.com/C00204864/p0-c00204864.git
