--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,7 @@
 [submodule "lib/RealLifeSim"]
 	path = lib/RealLifeSim
 	url = https://github.com/peterdaly97/RealLifeSim.git
+[submodule "lib/P0-C00202334"]
+	path = lib/P0-C00202334
+	url = https://github.com/Davidnln13/P0-C00202334.git
+	branch = diff
